default/objects/Case_management_settings__c/Case_management_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for Case management</description>
    <label>Case management settings</label>
</CustomObject>