default/objects/Case_management_settings__c/fields/Case_expired_days__c.field-meta.xml
<CustomField>
    <fullName>Case_expired_days__c</fullName>
    <description>The number of days after which the case becomes Closed from Resolved</description>
    <inlineHelpText>The number of days after which the case becomes Closed from Resolved</inlineHelpText>
    <label>Case expired days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>