default/objects/Case_management_settings__c/fields/Case_from_web_initial_status__c.field-meta.xml
<CustomField>
    <fullName>Case_from_web_initial_status__c</fullName>
    <description>Initial value of status field in Cases from website</description>
    <inlineHelpText>Initial value of status field in Cases from website</inlineHelpText>
    <label>Case from web initial status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>