default/objects/Case_management_settings__c/fields/Case_from_web_origin__c.field-meta.xml
<CustomField>
    <fullName>Case_from_web_origin__c</fullName>
    <description>Initial value of origin field in Cases from website</description>
    <inlineHelpText>Initial value of origin field in Cases from website</inlineHelpText>
    <label>Case from web origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>